Make it possible to finish measurement by pressing ENTER